<resources>
    <string name="app_name">DemoApplyPermissions</string>
    <string name="btn_permission_one">btn_permission_one</string>
    <string name="btn_permission_multi">btn_permission_multi</string>
    <string name="btn_storage">btn_storage</string>
    <string name="btn_camera">btn_camera</string>
    <string name="btn_phone">btn_phone</string>
    <string name="btn_sms">btn_sms</string>
</resources>
